--- a/NLP.ipynb
+++ b/NLP.ipynb
@@ -22,7 +22,7 @@
     "<div style=\"height: 2px; background-color:#6CA6C1; margin: 20px 0;\"></div>\n",
     "\n",
     "<h2 style=\"color:#FFB84C; font-family: 'Georgia', serif;\">Word Tokenization</h2>\n",
-    "<p style=\"color:#D3D3D3; font-family: Arial, sans-serif;\">\n",
+    "<p style=\" font-family: Arial, sans-serif;\">\n",
     "Splitting text into individual words. Example:<br>\n",
     "<i>\"NLP is fun!\" → [\"NLP\", \"is\", \"fun\", \"!\"]</i>\n",
     "</p>\n",
@@ -32,7 +32,7 @@
     "<div style=\"height: 2px; background-color:#6CA6C1; margin: 20px 0;\"></div>\n",
     "\n",
     "<h2 style=\"color:#FFB84C; font-family: 'Georgia', serif;\">Sentence Tokenization</h2>\n",
-    "<p style=\"color:#D3D3D3; font-family: Arial, sans-serif;\">\n",
+    "<p style=\" font-family: Arial, sans-serif;\">\n",
     "Dividing text into sentences. Example:<br>\n",
     "<i>\"I love NLP. It is powerful!\" → [\"I love NLP.\", \"It is powerful!\"]</i>\n",
     "</p>\n",
@@ -42,7 +42,7 @@
     "<div style=\"height: 2px; background-color:#6CA6C1; margin: 20px 0;\"></div>\n",
     "\n",
     "<h2 style=\"color:#FFB84C; font-family: 'Georgia', serif;\">Stop Words</h2>\n",
-    "<p style=\"color:#D3D3D3; font-family: Arial, sans-serif;\">\n",
+    "<p style=\" font-family: Arial, sans-serif;\">\n",
     "Removing common words like <i>\"is\", \"the\", \"and\"</i> that carry little meaning.<br>\n",
     "Example:<br>\n",
     "<i>\"This is a good example\" → [\"This\", \"good\", \"example\"]</i>\n",
@@ -53,10 +53,22 @@
     "<div style=\"height: 2px; background-color:#6CA6C1; margin: 20px 0;\"></div>\n",
     "\n",
     "<h2 style=\"color:#FFB84C; font-family: 'Georgia', serif;\">Stemming</h2>\n",
-    "<p style=\"color:#D3D3D3; font-family: Arial, sans-serif;\">\n",
+    "<p style=\" font-family: Arial, sans-serif;\">\n",
     "Reducing words to their root form. Example:<br>\n",
     "<i>\"running\", \"runner\", \"ran\"</i> → <b>\"run\"</b>\n",
-    "</p>\n"
+    "</p>\n",
+    "\n",
+    "---\n",
+    "\n",
+    "<div style=\"height: 2px; background-color:#6CA6C1; margin: 20px 0;\"></div>\n",
+    "\n",
+    "<h2 style=\"color:#FFB84C; font-family: 'Georgia', serif;\">Lemmatization </h2>\n",
+    "<p style=\" font-family: Arial, sans-serif;\">\n",
+    "Lemmatization reduces words to their base or dictionary form, considering meaning and context. Example:<br>\n",
+    "<i>\"mice\"</i> → <b>\"mouse\"</b>\n",
+    "</p>\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -318,27 +330,243 @@
    "source": [
     "<div style=\"text-align: center;\">\n",
     "\n",
-    "<h1 style=\"color:#FFB84C; font-family: 'Georgia', serif; font-size: 46px; font-weight: bold;\">\n",
+    "<h1 style=\"color:#FFB84C; font-family: 'Georgia', serif; font-size: 40px; font-weight: bold;\">\n",
     "Stemming\n",
     "</h1>\n",
+    "\n",
     "<h3 style=\"color:#B0C4DE; font-family: 'Trebuchet MS', sans-serif; font-size: 22px;\">\n",
-    "Stemming in NLTK refers to the process of reducing words to their base or root form\n",
+    "Stemming in NLTK refers to the process of reducing words to their base or root form.\n",
     "</h3>\n",
-    "</div>\n"
+    "\n",
+    "</div>\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🌟 Types of Stemmers in NLTK\n",
+    "\n",
+    "NLTK provides several algorithms for stemming. Here are the most popular ones:\n",
+    "\n",
+    "| Stemmer | Description |\n",
+    "|---------|-------------|\n",
+    "| **Porter Stemmer** | One of the oldest and most widely used stemming algorithms. Good for English words. |\n",
+    "| **Lancaster Stemmer** | More aggressive than Porter; may produce shorter stems. |\n",
+    "| **Snowball Stemmer** | An improved version of Porter Stemmer with support for multiple languages. |\n",
+    "| **Regexp Stemmer** | Allows you to define custom regular expressions for stemming. |\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "31ce40f8-8f29-4453-8c38-d6c0b492080b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.stem import LancasterStemmer , RegexpStemmer , PorterStemmer ,SnowballStemmer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "8a967cc3-aabd-4230-8287-0ad913ebb692",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = LancasterStemmer()\n",
+    "r = RegexpStemmer('ing')\n",
+    "p = PorterStemmer()\n",
+    "s = SnowballStemmer('english')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "2bcbd3bc-b54f-4437-afe3-b338bd3538c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'lowest'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l.stem(\"changing\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "cdc83b3b-bcb1-4d32-b028-fc4009e4d745",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'chang'"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r.stem(\"changing\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "b95016a5-397d-43bb-ad1e-ad7680281d6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'chang'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.stem(\"changes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "faab9283-1917-42c2-8302-caa78f961ea7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'chang'"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.stem(\"changed\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8b5879a-8615-492a-9ab3-848ccdce7140",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align: center;\">\n",
+    "\n",
+    "<h1 style=\"color:#FFB84C; font-family: 'Georgia', serif; font-size: 40px; font-weight: bold;\">\n",
+    "Lemmatization\n",
+    "</h1>\n",
+    "\n",
+    "<h3 style=\"color:#B0C4DE; font-family: 'Trebuchet MS', sans-serif; font-size: 22px;\">\n",
+    "Lemmatization reduces words to their base or dictionary form, considering meaning and context.\n",
+    "</h3>\n",
+    "\n",
+    "</div>\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## WordNet Lemmatizer\n",
+    "\n",
+    "NLTK uses the **WordNet Lemmatizer** to find the base form of words.  \n",
+    "It handles irregular forms and considers the context when needed.\n",
+    "\n",
+    "- **Example:** \"mice\" → \"mouse\", \"better\" → \"good\", \"flies\" → \"fly\"\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 📝 Difference Between Stemming and Lemmatization\n",
+    "\n",
+    "| Feature | Stemming | Lemmatization |\n",
+    "|---------|----------|---------------|\n",
+    "| **Definition** | Cuts words to their root form. | Converts words to their base/dictionary form using meaning. |\n",
+    "| **Accuracy** | Less accurate; may not be real words. | More accurate; always valid words. |\n",
+    "| **Example** | \"running\" → \"run\", \"flies\" → \"fli\" | \"mice\" → \"mouse\", \"better\" → \"good\" |\n",
+    "| **Speed** | Faster | Slower |\n",
+    "| **Use** | Quick preprocessing. | When meaning matters in NLP tasks. |\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "b4249565-cf90-4234-8955-d4158de5e3d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.stem import WordNetLemmatizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "106df68a-2d5f-4e07-a8ed-f7301fc47abb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\nitin\\AppData\\Roaming\\nltk_data...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "nltk.download('wordnet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "e2d04cda-6528-4085-979f-98d9f6482ffa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'mouse'"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wl = WordNetLemmatizer()\n",
+    "wl.lemmatize(\"mice\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31ce40f8-8f29-4453-8c38-d6c0b492080b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a967cc3-aabd-4230-8287-0ad913ebb692",
+   "id": "ceed3350-210f-4095-bcd1-1de3de9e0964",
    "metadata": {},
    "outputs": [],
    "source": []
